@@ -1,3 +1,8 @@
+2005/01/09 Jamal James <teflon114@gmail.com>
+* Added getUserByIdent() to UserManager
+* Added !approve irc plugin to net.drmods.plugins.irc
+* Moved !kick irc plugin to net.drmods.plugins.irc
+
 2005/01/05 Morgan Christiansson <drftpd@mog.se>
 * Fixed bug in KeyedMap that allowed duplicate keys to be added.
 
